# jasmine

./: .gitignore  LICENSE  README.md  pyproject.toml
jasmine/: _html_extract.py  _markdown.py  agent.py  ai.py  config.py  conversation.py  deepseek_backend.py  diff_utils.py  main.py  openai_backend.py  prompts.py  providers.py  terminal.py  tools.py  ui.py
jasmine/skills/frontend/: SKILL.md
tests/: test_conversation.py  test_diff_utils.py  test_integration.py  test_tools.py
